# guitarix

./: README.md
GuitarixMac/: CMakeLists.txt  README_macOS.md  build.sh  project.yml
GuitarixMac/GuitarixMac.xcodeproj/: project.pbxproj
GuitarixMac/Resources/: Info.plist
GuitarixMac/Sources/App/: AmpSelectorView.swift  AudioSettingsView.swift  ContentView.swift  EffectRackView.swift  GuitarixApp.swift  GuitarixViewModel.swift  LevelMeterView.swift  PresetBrowserView.swift  TunerView.swift
GuitarixMac/Sources/Bridge/: CoreAudioDriver.cpp  CoreAudioDriver.h  GuitarixBridge.h  GuitarixBridge.mm  GuitarixMac-Bridging-Header.h
GuitarixMac/Sources/stubs/: RTNeural.h  activations.h  dsp.h  get_dsp.h  guitarix.h  macos_compat.h  malloc.h
GuitarixMac/Sources/stubs/ext/: stdio_filebuf.h
GuitarixMac/Sources/stubs/gxw/: gainpoints.h
GuitarixMac/Sources/stubs/gxwmm/: gainline.h
trunk/src/headers/: gx_modulesequencer.h
